--- a/.gitignore
+++ b/.gitignore
@@ -1,7 +1,8 @@
+
 # See https://help.github.com/articles/ignoring-files/ for more about ignoring files.
 
 # dependencies
-/node_modules
+frontend/node_modules
 /.pnp
 .pnp.*
 .yarn/*
@@ -9,9 +10,6 @@
 !.yarn/plugins
 !.yarn/releases
 !.yarn/versions
-frontend/node_modules/
-backend/node_modules/
-node_modules/
 
 # testing
 /coverage
@@ -19,8 +17,6 @@ node_modules/
 # next.js
 /.next/
 /out/
-frontend/.next/
-frontend/out/
 
 # production
 /build
@@ -65,7 +61,6 @@ lib64/
 parts/
 sdist/
 var/
-.venv/
 
 *.egg-info/
 .installed.cfg
